0.54_dev
-add statements for python env.
-revise JS object instantiate statement for opov issue.
-refactor pyjsarray for performance.
-revise pyjsarray ndarray indexing.
-revise ndarray str method.
-add ndarray constructor methods.
-add ndarray stats methods.
-add ndarray dot method.

0.54    2021-07-16
-revise pyjsarray module for transcrypt.
