@@ -7,6 +7,7 @@
 -add ndarray constructor methods.
 -add ndarray stats methods.
 -add ndarray dot method.
+-add ndarray linspace method.
 
 0.54    2021-07-16
 -revise pyjsarray module for transcrypt.
